mat dialog + styles

--- a/ngapp/src/app/login/login.component.scss
+++ b/ngapp/src/app/login/login.component.scss
@@ -56,7 +56,7 @@ input:autofill {
   }
 }
 
-:host ::ng-deep .mat-progress-spinner circle, .mat-spinner circle {   
+:host ::ng-deep .mat-mdc-progress-spinner circle, .mat-mdc-progress-spinner circle {   
     stroke: white;
 }
 
