--- a/ngapp/src/app/stats-dashboard/classroom-selector/classroom-selector.component.html
+++ b/ngapp/src/app/stats-dashboard/classroom-selector/classroom-selector.component.html
@@ -1,4 +1,5 @@
-<div class="selectorHeader">
+<div class="selectorBody">
+  <div class="selectorHeader">
     <div>{{ts.l.select_a_classroom}}</div>
     <div>
         <i class="fa fa-times xbutton" (click)="closeDialog(null, null)"></i>
@@ -39,3 +40,6 @@
 <ng-template #noClassrooms>
     <div class="noClassrooms"> {{ts.l.add_students_for_statistics}}</div>
 </ng-template>
+
+</div>
+
