--- a/ngapp/src/app/stats-dashboard/stats-dashboard.component.scss
+++ b/ngapp/src/app/stats-dashboard/stats-dashboard.component.scss
@@ -12,6 +12,10 @@
     justify-content: space-between;
 }
 
+.dashboard-title {
+    font-weight: bold;
+}
+
 .cards-container {
     display: flex;
     align-items: stretch;
