--- a/ngapp/src/app/admin/database-stats/database-stats.component.scss
+++ b/ngapp/src/app/admin/database-stats/database-stats.component.scss
@@ -27,6 +27,7 @@
   justify-content: space-between;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version. */
 mat-card {
   display: flex;
   flex-direction: column;
