--- a/ngapp/src/app/chatbot/select-quiz-dialog/select-quiz-dialog.component.scss
+++ b/ngapp/src/app/chatbot/select-quiz-dialog/select-quiz-dialog.component.scss
@@ -1,3 +1,5 @@
+
+/* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version. */
 mat-tab-group {
     min-height: 40vh;
 }
