--- a/ngapp/src/app/dialogs/basic-dialog/basic-dialog.component.scss
+++ b/ngapp/src/app/dialogs/basic-dialog/basic-dialog.component.scss
@@ -2,6 +2,12 @@
   padding:10px;
 }
 
+h2 {
+  // overflow-wrap: break-word;
+  // max-width: 100%;
+  // padding-top: 20px;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
