--- a/ngapp/src/app/nav-bar/nav-bar/nav-bar.component.html
+++ b/ngapp/src/app/nav-bar/nav-bar/nav-bar.component.html
@@ -5,7 +5,7 @@
   <!-- logo -->
   <div (click)="goToHomePage()" class="nav-header">
     <div class="nav-title">
-      <img src="assets/img/logo-navbar.png" class="logo" />
+      <img src="assets/img/logo-navbar.png" class="logo" alt="An Scéalaí logo" />
     </div>
   </div>
   <!-- Three-bar menu button when screen is small -->
