--- a/ngapp/src/styles.scss
+++ b/ngapp/src/styles.scss
@@ -27,7 +27,7 @@
   --delete-red-hover: #b7000a;
   --notification-button: #bd2323;
   --highlight-error-red: rgb(255, 163, 163);
-  --paper-img: url(https://www.abair.ie/scealai/assets/img/paperBg.jpg) no-repeat center fixed;
+  //--paper-img: url(https://www.abair.ie/scealai/assets/img/paperBg.jpg) no-repeat center fixed;
 }
 
 html,body.rootBody {
