--- a/ngapp/src/app/landing/landing.component.scss
+++ b/ngapp/src/app/landing/landing.component.scss
@@ -6,6 +6,7 @@
 
 .landingImg {
     width: 42%;
+    height: auto;
 }
 
 .landingText {
@@ -112,6 +113,7 @@
 
 .logoImg {
     height: 40px;
+    width: auto;
 }
 
 
