--- a/ngapp/src/app/landing/landing.component.html
+++ b/ngapp/src/app/landing/landing.component.html
@@ -1,5 +1,5 @@
 <div class="landingTextContainer">
-    <img src="assets/img/logo-landing.png" class="landingImg" alt="An Scéalaí logo">
+    <img src="assets/img/logo-landing-resize.png" class="landingImg" alt="An Scéalaí logo">
     <p class="landingText">
       {{ts.l.quote}}
     </p>
@@ -19,23 +19,23 @@
   </div>
 </div>
   
-<img src="assets/img/main01.png" class="bottomLeftImg" alt="An old woman telling a story by the fireplace">
-<img src="assets/img/main02.png" class="bottomRightImg" alt="A girl with a tablet and a cat">
+<img src="assets/img/main01-resize.png" class="bottomLeftImg" alt="An old woman telling a story by the fireplace">
+<img src="assets/img/main02-resize.png" class="bottomRightImg" alt="A girl with a tablet and a cat">
 <!-- img src="assets/img/main03.png" class="topRightImg" -->
 
 <div class="catContainer">
-  <img src="assets/img/main04.png" class="catJumpingImg" alt="A cat jumping">
-  <img src="assets/img/main05.png" class="catWalkingImg" alt="A cat standing">
+  <img src="assets/img/main04-resize.png" class="catJumpingImg" alt="A cat jumping">
+  <img src="assets/img/main05-resize.png" class="catWalkingImg" alt="A cat standing">
 </div>
 
 <!-- Footer containing logos -->
 <div class="footerLanding">
   <div class="copyright">{{ts.l.copyright}}</div>
   <div class="footerLogos">
-    <img class="logoImg" src="assets/img/logo_abair.png" alt="Abair logo">
-    <img class="logoImg" src="assets/img/logo_S20.png" alt="20-Year Strategy for the Irish Language logo">
-    <img class="logoImg" src="assets/img/logo_dept_arts_culture.png" alt="Department of Tourism, Culture, Arts, Gaeltacht, Sport and Media logo">
-    <img class="logoImg" src="assets/img/logo_cogg.png" alt="An Chomhairle um Oideachas Gaeltachta & Gaelscolaíochta logo">
-    <img class="logoImg" src="assets/img/logo_TCD.png" alt="Trinity College Dublin logo">  
+    <img class="logoImg" src="assets/img/logo_abair-compressed.png" alt="Abair logo">
+    <img class="logoImg" src="assets/img/logo_S20-compressed.png" alt="20-Year Strategy for the Irish Language logo">
+    <img class="logoImg" src="assets/img/logo_dept_arts_culture-compressed.png" alt="Department of Tourism, Culture, Arts, Gaeltacht, Sport and Media logo">
+    <img class="logoImg" src="assets/img/logo_cogg-compressed.png" alt="An Chomhairle um Oideachas Gaeltachta & Gaelscolaíochta logo">
+    <img class="logoImg" src="assets/img/logo_TCD-compressed.png" alt="Trinity College Dublin logo">  
   </div>
 </div>
