new table structure

--- a/ngapp/src/app/admin/add-content/add-content.component.html
+++ b/ngapp/src/app/admin/add-content/add-content.component.html
@@ -118,5 +118,6 @@
 </div>
 
 <!-- Data Tables -->
-<app-prompt-data-table #promptDataTable [data]="promptDataSource" ></app-prompt-data-table>
+<!-- <app-prompt-data-table #promptDataTable [data]="promptDataSource" ></app-prompt-data-table> -->
+<app-prompt-data-table #promptDataTable ></app-prompt-data-table>
 <app-pos-data-table #posDataTable [data]="posDataSource"></app-pos-data-table>
