--- a/ngapp/src/app/admin/add-content/prompt-data-table/prompt-data-table.component.scss
+++ b/ngapp/src/app/admin/add-content/prompt-data-table/prompt-data-table.component.scss
@@ -1,24 +1,73 @@
-table {
-    width: 100%;
-    text-align: left;
-}
+// table {
+//     width: 100%;
+//     text-align: left;
+// }
 
-td, th {
-    text-align: left !important;
-    vertical-align: middle !important;
-}
+// td, th {
+//     text-align: left !important;
+//     vertical-align: middle !important;
+// }
 
-.mat-sort-header-container {
-    justify-content: space-evenly !important;
-}
+// .mat-sort-header-container {
+//     justify-content: space-evenly !important;
+// }
 
-.example-container {
-    overflow-x: scroll;
-    max-width: 60px;
-    text-align: left !important;
+// .example-container {
+//     overflow-x: scroll;
+//     max-width: 60px;
+//     text-align: left !important;
+//   }
+
+// .mat-mdc-form-field {
+//     font-size: 14px;
+//     width: 100%;
+// }
+
+p {
+    font-family: Lato;
   }
-
-.mat-mdc-form-field {
-    font-size: 14px;
-    width: 100%;
-}
+  table {
+    width: 90%;
+    margin: auto;
+    margin-top: 25px;
+  }
+  .btn-edit {
+    text-align: right;
+  }
+  h2 {
+    text-align: center;
+    padding-top: 20px;
+  }
+  
+  .table-header {
+    width: 90%;
+    margin: auto;
+    text-align: right;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .button-add-row {
+    background: #1b9e1b;
+    color: #ffffff;
+  }
+  
+  .button-remove-rows {
+    background: red;
+    color: #ffffff;
+    margin-right: 5px;
+  }
+  
+  .button-remove {
+    color: red;
+  }
+  
+  ::ng-deep .mat-form-field-infix {
+    width: 100% !important;
+  }
+  
+  .form-input {
+    padding-right: 5px;
+  }
