--- a/ngapp/src/app/admin/add-content/prompt-data-table/prompt-data-table.component.scss
+++ b/ngapp/src/app/admin/add-content/prompt-data-table/prompt-data-table.component.scss
@@ -34,10 +34,6 @@ p {
   .btn-edit {
     text-align: right;
   }
-  h2 {
-    text-align: center;
-    padding-top: 20px;
-  }
   
   .table-header {
     width: 90%;
@@ -50,8 +46,9 @@ p {
   }
   
   .button-add-row {
-    background: #1b9e1b;
+    background: var(--scealai-green);
     color: #ffffff;
+    margin-right: 5px;
   }
   
   .button-remove-rows {
@@ -70,4 +67,16 @@ p {
   
   .form-input {
     padding-right: 5px;
+  }
+
+  .multipleRowInput {
+    width: 90%;
+  }
+
+.mat-mdc-checkbox.mat-accent {
+    --mdc-checkbox-selected-checkmark-color: #fff;
+    --mdc-checkbox-selected-focus-icon-color: var(--scealai-green);
+    --mdc-checkbox-selected-hover-icon-color: var(--scealai-green);
+    --mdc-checkbox-selected-icon-color: var(--scealai-green);
+    --mdc-checkbox-selected-pressed-icon-color: var(--scealai-green);
   }
