update generators to fit data

--- a/ngapp/src/app/nav-bar/nav-bar/nav-bar.component.html
+++ b/ngapp/src/app/nav-bar/nav-bar/nav-bar.component.html
@@ -54,7 +54,7 @@
       <a mat-menu-item class="dropdownMenuItem" routerLink="/prompts/exam" (click)="toggleSmallMenu()" > {{ ts.l.exam_prompts }} </a>
       <a mat-menu-item class="dropdownMenuItem" routerLink="/prompts/lara" (click)="toggleSmallMenu()" > {{ ts.l.lara_prompts }} </a>
       <a mat-menu-item class="dropdownMenuItem" routerLink="/prompts/combination" (click)="toggleSmallMenu()" > {{ ts.l.combination_generator }} </a>
-      <a mat-menu-item class="dropdownMenuItem" routerLink="/prompts/pos" (click)="toggleSmallMenu()" > {{ ts.l.part_of_speech_generator }} </a>
+      <a mat-menu-item class="dropdownMenuItem" routerLink="/prompts/partOfSpeech" (click)="toggleSmallMenu()" > {{ ts.l.part_of_speech_generator }} </a>
     </mat-menu>
 
     <!-- About menu -->
