--- a/ngapp/src/app/prompts/prompts.component.scss
+++ b/ngapp/src/app/prompts/prompts.component.scss
@@ -82,7 +82,7 @@
     animation-duration: 3s;
 }
 
-.setting {
+.location {
     font-size: 24px;
     margin: 0px 8px 8px 0px;
     animation-name: slots;
