--- a/ngapp/src/app/student/home-page/home-page.component.html
+++ b/ngapp/src/app/student/home-page/home-page.component.html
@@ -94,7 +94,7 @@
             {{ ts.l.combination_generator }}
           </mat-card-content>
         </mat-card>
-        <mat-card routerLink="/prompts/pos" class="dashSubButton">
+        <mat-card routerLink="/prompts/partOfSpeech" class="dashSubButton">
           <mat-card-content>
             {{ ts.l.part_of_speech_generator }}
           </mat-card-content>
