--- a/ngapp/src/app/prompts/prompts.component.scss
+++ b/ngapp/src/app/prompts/prompts.component.scss
@@ -103,6 +103,16 @@
     font-size: 24px;
 }
 
+.showTranslation {
+    font-size: small;
+    float: right;
+}
+
+.showTranslation:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 
 @media only screen and (max-width: 700px) {
     .container {
