synth preference in caache

--- a/ngapp/src/app/student/dashboard/dashboard.component.html
+++ b/ngapp/src/app/student/dashboard/dashboard.component.html
@@ -89,7 +89,7 @@
     <mat-slide-toggle
       class="listenToggle"
       (click)="synthButtons?.toggle()"
-      checked="true"
+      [checked]="synthButtons?.enabled"
     >
     </mat-slide-toggle>
     <span (click)="toggleRightDrawer('synthesis')">
