--- a/ngapp/src/app/story-stats/ngram-distribution/ngram-distribution/ngram-distribution.component.html
+++ b/ngapp/src/app/story-stats/ngram-distribution/ngram-distribution/ngram-distribution.component.html
@@ -1,11 +1,13 @@
-<mat-form-field appearance="fill">
-  <mat-label>{{ts.l.n_gram}}</mat-label>
-  <mat-select [(ngModel)]="selectedN" name="n" (selectionChange)="loadNgramChart()">
-    <mat-option *ngFor="let n of [1, 2, 3, 4, 5]" [value]="n">
-      {{n}}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
-<div class="chart-container" style="position: relative;">
-    <canvas id="ngram-chart" width="400" height="200"></canvas>
+<div class="ngramChartContainer">
+  <mat-form-field appearance="fill" class="ngramSelect">
+    <mat-label>{{ts.l.n_gram}}</mat-label>
+    <mat-select [(ngModel)]="selectedN" name="n" (selectionChange)="loadNgramChart()">
+      <mat-option *ngFor="let n of [1, 2, 3, 4, 5]" [value]="n">
+        {{n}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+  <div class="chart-container" >
+      <canvas id="ngram-chart" width="400" height="200"></canvas>
+  </div>  
 </div>
