update synth api calls

--- a/ngapp/src/app/synth-voice-select/synth-voice-select.component.html
+++ b/ngapp/src/app/synth-voice-select/synth-voice-select.component.html
@@ -8,7 +8,7 @@
       required
       data-gender={{voice.gender}}
       [value]=voice>
-        {{voice.note + voice.name + ' (' + ts.message(voice.dialect) + ') '}}
+        {{voice.name + ' (' + ts.message(voice.dialect) + ') '}}
     </mat-option>
   </mat-select>
 </mat-form-field>
